# dtpu

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_dot_product.hpp  benchmark_main.cpp
benchmarks/dist_bench/: benchmark_dist_main.cpp  benchmark_distributed.cpp  benchmark_distributed.hpp  benchmark_packet.cpp  benchmark_packet.hpp
benchmarks/dot_bench/: benchmark_dot_product.cpp  benchmark_dot_product.hpp  benchmark_main.cpp
benchmarks/results/distributed/: distributed_benchmark.csv  packet_benchmark.csv
benchmarks/results/dot/: benchmark_results_2026-06-14_23-12-47.csv
emulation/: host_main.cpp  qemu_main.cpp
hal/include/: spi_transport.hpp  transport.hpp  uart_transport.hpp
hal/src/: spi_transport.cpp  uart_transport.cpp
libtrit/include/: ops.hpp  packed_vector.hpp  trit.hpp  vector.hpp
libtrit/src/: ops.cpp  packed_vector.cpp  trit.cpp  vector.cpp
master/include/: master.hpp
master/src/: master.cpp
protocol/include/: opcode.hpp  packet.hpp
protocol/src/: packet.cpp
qemu/: boot.txt
sim/: sim_main.cpp  sim_transport.cpp  sim_transport.hpp
src/: main.cpp
tests/: test_main.cpp  test_master.cpp  test_ops.cpp  test_packedvector.cpp  test_packet.cpp  test_spi.cpp  test_trit.cpp  test_uart.cpp  test_vector.cpp  test_worker.cpp
worker/include/: worker.hpp
worker/src/: worker.cpp
